# grid-emissions-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  renovate.json
.github/workflows/: build.yml
scripts/: ingest.sh
src/grid_emissions_api/: config.py  database.py  emissions.py  entsoe_client.py  ingest.py  main.py  models.py
src/grid_emissions_api/static/: index.html
tests/: sample_entsoe_response.xml  test_api.py  test_database.py  test_emissions.py  test_parsing.py
