[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grid-emissions-api"
version = "0.1.0"
description = "Free API for hourly EU electricity grid emissions intensity (gCO2eq/kWh)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.24",
]
